[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Chess.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/wood1.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/Table.gd" type="Script" id=3]

[sub_resource type="TileSet" id=1]
0/name = "wood1.jpg 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 320 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wood1.jpg 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 320, 512, 192 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Table" type="TileMap"]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 8, 0, 0, 16, 0, 0, 327680, 1, 0, 327688, 1, 0, 327696, 1, 0, 524288, 0, 0, 524296, 0, 0, 524304, 0, 0 )
script = ExtResource( 3 )

[node name="ChessContainer" type="Panel" parent="."]
margin_left = 60.0
margin_top = 60.0
margin_right = 580.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChessGame" parent="ChessContainer" instance=ExtResource( 1 )]
position = Vector2( 4, 4 )

[node name="UI" type="VBoxContainer" parent="."]
margin_left = 902.0
margin_top = 110.0
margin_right = 1126.0
margin_bottom = 485.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_right = 224.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_right = 224.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
margin_right = 89.0
margin_bottom = 14.0
text = "WHITE WINS: "

[node name="Label2" type="Label" parent="UI/VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 101.0
margin_bottom = 14.0
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_top = 18.0
margin_right = 224.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer2"]
margin_right = 88.0
margin_bottom = 14.0
text = "BLACK WINS: "

[node name="Label2" type="Label" parent="UI/VBoxContainer/HBoxContainer2"]
margin_left = 88.0
margin_right = 96.0
margin_bottom = 14.0
text = "0"

[node name="playerbtn2" type="Button" parent="UI"]
margin_top = 36.0
margin_right = 224.0
margin_bottom = 56.0
text = "Human vs Human"

[node name="playerbtn1" type="Button" parent="UI"]
margin_top = 60.0
margin_right = 224.0
margin_bottom = 80.0
text = "Human vs AI"

[node name="playerbtn0" type="Button" parent="UI"]
margin_top = 84.0
margin_right = 224.0
margin_bottom = 104.0
text = "AI vs AI"
